--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,27 +6,14 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": ["${input:fileAOC}.sample.txt"]
+            "args": ["${fileDirname}/sample"]
         },
         {
             "name": "Python Debugger: Input Data",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
-            "args": ["${input:fileAOC}.input.txt"]
+            "args": ["${fileDirname}/input"]
         }
-    ],
-    "inputs": [
-        {
-            "id": "fileAOC",
-            "type": "command",
-            "command": "extension.commandvariable.transform", // rioj7.command-variable extension required
-            "args": {
-                "text": "${file}",
-                "find": ".py$",
-                "replace": "",
-                "flags": ""
-            }
-        }
-    ],
+    ]
 }
